[package]
name = "notion-and-github-linker"
version = "0.1.0"
authors = ["SuguruOoki <oki.work0527@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notion = "0.3.4"
lambda = { package = "netlify_lambda", version = "0.2.0" }
tokio = "1.5.0"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"

[dev-dependencies]
pretty_assertions = "0.7.2"
